Cleanup TopologyStatsRpcServiceImplTest
Use List.of() instead of Collections.{empty,singleton}List and
Arrays.asList().

Change-Id: I07c83de4b59c53645a35e20b4d11ba67db286e7c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>